# Symphony

./: .dockerignore  .gitignore  DATA.md  DEV_PROCESS.md  Dockerfile  MODELS.md  Pipfile  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: .env  app.py  instrument_enum.py  main.py  model_info.json  soundfont_testing.py  test.py
src/common/: api_helper.py  file_helper.py  melody_generator.py  music_helper.py  music_helpers.py
src/models/: preprocess.py  train.py
src/models/AltDrums/: song_mappings.json
src/models/Drums/: DrumsTrain.ipynb
src/models/FolkLSTM/: FolkLSTM-Draft1.h5  FolkLSTM.h5  song_mappings.json  train.py
src/models/FunkDrums/: FunkDrumsTrain.ipynb  song_mappings.json
src/models/Guitar/: GuitarTrain.ipynb  song_mappings.json
src/models/JazzDrums/: JazzDrumTrain.ipynb  song_mappings.json
src/models/KKSlider/: KKSliderLSTM.ipynb  M21 Polyphonic testing.ipynb  Model_Predict.ipynb  song_mappings.json  soundfont_testing.py
src/models/LatinDrums/: __init__.py
src/models/Piano/: PianoTrain.ipynb  song_mappings.json
src/models/RetroLSTM/: train.py
src/output/: output.txt
